<resources>
    <string name="app_name">Moses-APC</string>
    <string name="version">v2.0</string>
    <string name="date">Date  </string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="apik">mrj2k12atxplusg5</string>
    <string name="cl">Credit Limit Balance</string>
    <string name="versiondate">APC 2022-07-20</string>
    <string name="date_from">Date from </string>
    <string name="date_to">Date to</string>
    <string name="issHint">Type here only one issue at a time and then tap the OPEN ISSUE button. If you want to open another issue for the same customer, tap on dashboard’s CUSTOMER ISSUE button and repeat the process."</string>
    <string name="register">Register</string>
    <string name="company">Company</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="mobileno">Mobile Number</string>
    <string name="email">Email Address</string>
    <string name="type">Salesman type</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="add_comp_item">Add Competitors Item</string>
    <string name="add_comp_price">Fill out Retail Data</string>
    <string name="strcheck">Compliance Checklist</string>
    <string name="survey">Competitor Survey</string>
    <string name="customer_name">Customer Name</string>
    <string name="download_customers">Download Customer List</string>
    <string name="download_items">Download Item List</string>
    <string name="download_cplan">Download Coverage Plan</string>
    <string name="sync_sales_order">Sync Sales Order</string>
    <string name="non_sched">Non Schedule</string>
    <string name="on_sched">On Schedule</string>
    <string name="all_customers">All Customers</string>
    <string name="sync_header">Download Data Tables</string>
    <string name="customers">Customers</string>
    <string name="search_customer">Search Customer</string>
    <string name="action_add_customer">Add Customer</string>
    <string name="no_data">No Record</string>
    <string name="action_edit">View/Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_add">Add</string>
    <string name="action_sync">Sync</string>
    <string name="action_delete_all">Delete All</string>
    <string name="action_mark">Mark as served</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="customer_code">Customer Code</string>
    <string name="customer">Customer</string>
    <string name="name">Name</string>
    <string name="address">Street</string>
    <string name="brgy">Brgy</string>
    <string name="city">City</string>
    <string name="state">Province</string>
    <string name="contact_number">Contact Number</string>
    <string name="acct_type">Acct Type</string>
    <string name="cplan">CPlan (Sched)</string>
    <string name="defaults">Defaults</string>
    <string name="buffer">Buffer</string>
    <string name="num_days"># of days </string>
    <string name="salestype">Cash Sales/Sales Booking</string>
    <string name="cash_sales">Cash Sales</string>
    <string name="terms">Terms</string>
    <string name="sales_booking">Sales Booking</string>
    <string name="packaging">Packaging</string>
    <string name="by_case">By Case</string>
    <string name="by_piece">By Piece</string>
    <string name="by_case_piece">Both By Case/Piece</string>
    <string name="no_customers">No Customers</string>
    <string name="sel_pack">Select Packaging</string>
    <string name="sel_uom">Select UOM</string>
    <string name="sel_cat">Select Category</string>
    <string name="sel_subcat">Select Sub-Category</string>
    <string name="profile">Profile</string>
    <string name="prof_Header">Profile List</string>
    <string name="ex_cplan">Type Mon,Tue,Wed,Thu,Fri,Sat,Sun for options</string>
    <string name="percent">%</string>
    <string name="outbox">Outbox</string>
    <string name="empty_outbox">Empty Outbox</string>
    <string name="history">History</string>
    <string name="delete">Delete</string>
    <string name="time_in">Time In</string>
    <string name="time_ot">Time Out</string>
    <string name="time_inout">Time In/Out</string>
    <string name="accuracy">Accuracy</string>
    <string name="gpstime">GPS Time</string>
    <string name="gps_status">GPS Status</string>
    <string name="devicetime">Device Time</string>
    <string name="greet">Greet Customer</string>
    <string name="introduce">Introduce yourself</string>
    <string name="ask">Ask permission to check store and warehouse</string>
    <string name="checklist">Pre-Call Checklist</string>
    <string name="check1">Check the OHD versus must-sell SKUs</string>
    <string name="check2">Check the pricing of your merchandise versus SRP</string>
    <string name="check3">Check the shelves and display position versus display standard</string>
    <string name="check4">Check the inventory of your products in the warehouse and in the display area</string>
    <string name="check5">Check competitors’ activities-pricing and new products</string>
    <string name="productive">Productive Visit</string>
    <string name="pcheck1">Have I defined my purpose for the visit?</string>
    <string name="ocheck2">Have I set my SMART objectives for this visit?</string>
    <string name="pcheck3">Have I reviewed customer profile? \nHave I leveraged customer insights for this visit?</string>
    <string name="scheck4">Have I defined my strategy for this visit? \nHave I used previous information in my strategy?</string>
    <string name="acheck5">Have I anticipated possible questions and issues? \nHave I identified possible risks and opportunities?</string>
    <string name="newproductive">Is my visit productive?</string>
    <string name="sales">Sales</string>
    <string name="sales_amount">Sales Amount</string>
    <string name="collection">Collection</string>
    <string name="cash">Cash</string>
    <string name="check">Check</string>
    <string name="cm">Credit Memo</string>
    <string name="check_num">Check No.</string>
    <string name="check_amt">Check Amount</string>
    <string name="cash_amount">Cash Amount</string>
    <string name="deposit_amount">Deposit Amount</string>
    <string name="cm_amount">Credit Memo Amount</string>
    <string name="invoiceno">Invoice No.</string>
    <string name="invoice_amount">Invoice Amount</string>
    <string name="cm_num">CM No.</string>
    <string name="bankinfo">Bank Info</string>
    <string name="bank_deposit">Bank Deposit</string>
    <string name="bankname">Bank Name</string>
    <string name="bankbranch">Bank Branch</string>
    <string name="txno">TX No.</string>
    <string name="total_amount">Total Amount</string>
    <string name="paid">Paid</string>
    <string name="sono">REF No.</string>
    <string name="orno">OR No.</string>
    <string name="reason_no_production">Reason For No Production</string>
    <string name="balance">Balance</string>
    <string name="remarks">Remarks</string>
    <string name="gremarks">General Remarks</string>
    <string name="tap_remarks">Tap to enter remarks</string>
    <string name="mark_location">Mark Location</string>
    <string name="mark">Mark</string>
    <string name="currentfix">Current Fix</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_savesignature">Save</string>
    <string name="signatures_dir">Signatures</string>
    <string name="signature">Signature</string>
    <string name="get_signature">Get Signature</string>
    <string name="upsignature">Upload Signature</string>
    <string name="upload_msgs">https://moses.xpluscloud.com/xupload/messages</string>
    <string name="upload_customers">https://moses.xpluscloud.com/xupload/customers</string>
    <string name="sig_file_upload">https://moses.xpluscloud.com/xupload/signatures</string>
    <string name="pic_file_upload">https://moses.xpluscloud.com/xupload/pictures</string>
    <string name="url_download_contacts">http://xplustrack.com/secured/download_contacts</string>
    <string name="upload_datas">https://moses.xpluscloud.com/xupload/sync_server</string>
    <string name="appversion">https://moses.xpluscloud.com/app_version</string>
    <string name="link">https://moses.xpluscloud.com</string>
    <string name="pictures_dir">Pictures</string>
    <string name="pictures_del_dir">CusDelete</string>
    <string name="upload">Upload</string>
    <string name="expired_msg">This App is outdated!</string>
    <string name="download_msg">Download a new version at </string>
    <string name="download_url">https://moses.xpluscloud.com</string>
    <string name="search_sku">Search SKU</string>
    <string name="itemcode">ItemCode</string>
    <string name="description">Description</string>
    <string name="tName">Name</string>
    <string name="tCapacity">Capacity</string>
    <string name="tType">Type</string>
    <string name="tQty">Units</string>
    <string name="wQty">Quantity (bags)</string>
    <string name="so_type">BOOKING</string>
    <string name="pack">Packs</string>
    <string name="price_per_pack">Price/Pack</string>
    <string name="inventory_pack">Inventory (Pack)</string>
    <string name="suggest_pack">Suggest (Pack)</string>
    <string name="order_qty_pack">Order Qty (Pack)</string>
    <string name="amt_pack">Amount (Pack)</string>
    <string name="unit">UNITS</string>
    <string name="price_per_unit">Price/Unit</string>
    <string name="inventory_unit">Inventory (Unit)</string>
    <string name="suggest_unit">Suggest (Unit)</string>
    <string name="order_qty_unit">Order Qty (Unit)</string>
    <string name="amt_unit">Amount (Unit)</string>
    <string name="qty_pack">Qty Css</string>
    <string name="qty_unit">Qty Pcs</string>
    <string name="sp_pack">SP/Cs</string>
    <string name="sp_unit">SP/Pc</string>
    <string name="zero">0</string>
    <string name="none"></string>
    <string name="total">Total</string>
    <string name="amount">Amount</string>
    <string name="submit">Submit</string>
    <string name="inventory">Inventory</string>
    <string name="suggest">Sug. Order</string>
    <string name="qty">Qty</string>
    <string name="vol">Volume</string>
    <string name="price">Price</string>
    <string name="price1">DTR\nPrice</string>
    <string name="price2">Retail\nPrice</string>
    <string name="discount">%Disc</string>
    <string name="ioh">IOH</string>
    <string name="go">Go</string>
    <string name="ret01">11kg</string>
    <string name="ret02">2.7kg</string>
    <string name="ret03">22kg</string>
    <string name="ret04">50kg</string>
    <string name="ret05">5kg</string>
    <string name="ret06">7kg</string>
    <string name="surend">Surrendered</string>
    <string name="amt_desc">Amount </string>
    <string name="pin_desc">PIN# </string>
    <string name="action_resend">Resend</string>
    <string name="action_view">More info</string>
    <string name="sc_type">SO Type</string>
    <string name="pckg">PCKG</string>
    <string name="add_sku">Add SKU</string>
    <string name="prno">PR No.</string>
    <string name="add_pr">Add Product Return</string>
    <string name="new_reminders">Tools Checklist</string>
    <string name="reminders">REVIEW PLANS</string>
    <string name="rem1">Sales invoices and ORs</string>
    <string name="rem2">Merchandising materials</string>
    <string name="rem3">Daily call plan</string>
    <string name="rem4">Car safety</string>
    <string name="rem5">Laptop battery fully charged</string>
    <string name="rem6">Mobile phone battery fully charged</string>
    <string name="rem7">Power bank and mobile phone fully charged</string>
    <string name="reminders2">MGA BAGAY NA DAPAT I-CHECK BAGO BUMIYAHE (BLOW BAGETS)</string>
    <string name="pass">Password</string>
    <string name="pHint">Hint</string>
    <string name="login">Login</string>
</resources>