<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bg34"
    android:orientation="vertical" >

    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pass"
        android:padding="13dp"        
        android:background="@drawable/rounded_gray_border"
        android:inputType="textPassword" >
        <requestFocus />
    </EditText>
<Button
        android:id="@+id/btHint"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:textColor="#E88100"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:background="@drawable/custom_button_click"
        android:text="@string/pHint" />
    
    
    </LinearLayout>


    <Button
        android:id="@+id/btLogin"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#E88100"
        android:textStyle="bold"
        android:background="@drawable/custom_button_click"
        android:text="@string/login" />
    
    

</LinearLayout>
